<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_SequenceDM_Drain" Id="{8893feca-8c58-4260-957d-8ffd051f9cf7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SequenceDM_Drain EXTENDS FB_SequenceBase

VAR
	bUseMainPump_A: BOOL := TRUE;  // this boolean is used to keep track of which of the two redudant pumps we should use
END_VAR

VAR_IN_OUT
	devices: ST_DMComponents;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{54cf7682-6c73-40d9-8cdf-9bd4c234fec3}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
		Here we set the order of things to command, what the commands should be, and also how much time to allow during and between steps
		Every component listed below becomes 'Enabled' at each step
*)
sSequenceName := 'DM Drain SEQ';
sSequenceName := 'Dosing Machine Drain sequence';




]]></ST>
      </Implementation>
    </Method>
    <Method Name="populateSteps" Id="{4a78d666-b7f6-414c-9e36-b04b3f9a43bd}">
      <Declaration><![CDATA[METHOD populateSteps : ST_SequenceStep
VAR_INPUT
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
		Here we set the order of things to command, what the commands should be, and also how much time to allow during and between steps
		Every component listed below becomes 'Enabled' at each step
*)
Step1.Device := devices.fbStrainer;
Step1.Command := E_DeviceState.RUNNING;
Step1.StepMinDuration := T#0S; 
Step1.DelayUntilNextStep := T#0S;
aSequenceSteps[1] := Step1;

Step2.Device := devices.fbUnit_UltraSonCleaner;
Step2.Command := E_DeviceState.RUNNING;
Step2.StepMinDuration := T#0S; 
Step2.DelayUntilNextStep := T#0S;
aSequenceSteps[2] := Step2;

Step3.Device := devices.fbUVFilter1;
Step3.Command := E_DeviceState.RUNNING;
Step3.StepMinDuration := T#0S; 
Step3.DelayUntilNextStep := T#10S;				// Steps 1 - 3 can happen in parallel
aSequenceSteps[3] := Step3;

Step4.Device := devices.fbValve_DosingSupply;
Step4.Command := E_DeviceState.OPEN;
Step4.StepMinDuration := T#0S; 
Step4.DelayUntilNextStep := T#0S;
aSequenceSteps[4] := Step4;

(*
Step4.Device := devices.fbPump_MainPumpA;   // start with Pump A - this will need to be changed to pump b every 24hrs
Step1.sID := devices.^.getID();
Step1.sDescr := devices.^.getDescription();
Step4.Command := E_DeviceState.RUNNING;
Step4.StepMinDuration := T#10S; 
Step4.DelayUntilNextStep := T#5S;
aSequenceSteps[4] := Step4;
*)

Step5.Device := devices.fbUnit_OxyInjector;
Step5.Command := E_DeviceState.RUNNING;
Step5.StepMinDuration := T#0S; 
Step5.DelayUntilNextStep := T#0S;
aSequenceSteps[5] := Step5;

Step6.Device := devices.fbDosingPump_phUp;
Step6.Command := E_DeviceState.IDLE;
Step6.StepMinDuration := T#0S; 
Step6.DelayUntilNextStep := T#0S;
aSequenceSteps[6] := Step6;

Step7.Device := devices.fbDosingPump_phDown;
Step7.Command := E_DeviceState.IDLE;
Step7.StepMinDuration := T#0S; 
Step7.DelayUntilNextStep := T#0S;
aSequenceSteps[7] := Step7;

Step8.Device := devices.fbDosingPump_NutrientA;
Step8.Command := E_DeviceState.IDLE;
Step8.StepMinDuration := T#0S; 
Step8.DelayUntilNextStep := T#0S;
aSequenceSteps[8] := Step8;

Step9.Device := devices.fbDosingPump_NutrientB;
Step9.Command := E_DeviceState.IDLE;
Step9.StepMinDuration := T#0S; 
Step9.DelayUntilNextStep := T#0S;
aSequenceSteps[9] := Step9;

Step10.Device := devices.fbDosingPump_NutrientC;
Step10.Command := E_DeviceState.IDLE;
Step10.StepMinDuration := T#0S; 
Step10.DelayUntilNextStep := T#0S;
aSequenceSteps[10] := Step10;



Step11.Device := devices.fbDosingPump_NutrientC;
Step11.Command := E_DeviceState.IDLE;
Step11.StepMinDuration := T#0S; 
Step11.DelayUntilNextStep := T#0S;
aSequenceSteps[11] := Step11;
(* Step11.Component := devices.fbControlLoop_Dosing;
Step11.sID := devices.fbControlLoop_Dosing^.getID();
Step11.sDescr := devices.fbControlLoop_Dosing^.getDescription();
Step11.Command := E_DeviceState.RUNNING;
Step11.StepMinDuration := T#0S; 
Step11.DelayUntilNextStep := T#0S;
aSequenceSteps[11] := Step11;
*)

Step12.Device := devices.fbValve_IrrigatorSupply;
Step12.Command := E_DeviceState.CLOSED;					// This valve may already be closed, sending this command will enable the valve, permitting supervisory control
Step12.StepMinDuration := T#0S; 
Step12.DelayUntilNextStep := T#0S;
aSequenceSteps[12] := Step12;

nNumberSequenceSteps := 12;  // use this number to limit the number of operations
updateVarIDs(); ]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_SequenceDM_Drain">
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_SequenceDM_Drain.FB_init">
      <LineId Id="10" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="109" Count="1" />
      <LineId Id="99" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="97" Count="0" />
    </LineIds>
    <LineIds Name="FB_SequenceDM_Drain.populateSteps">
      <LineId Id="9" Count="3" />
      <LineId Id="211" Count="0" />
      <LineId Id="69" Count="2" />
      <LineId Id="153" Count="0" />
      <LineId Id="72" Count="4" />
      <LineId Id="154" Count="0" />
      <LineId Id="77" Count="4" />
      <LineId Id="155" Count="0" />
      <LineId Id="82" Count="4" />
      <LineId Id="156" Count="0" />
      <LineId Id="87" Count="2" />
      <LineId Id="180" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="90" Count="2" />
      <LineId Id="157" Count="1" />
      <LineId Id="98" Count="4" />
      <LineId Id="159" Count="0" />
      <LineId Id="103" Count="4" />
      <LineId Id="160" Count="0" />
      <LineId Id="108" Count="4" />
      <LineId Id="161" Count="0" />
      <LineId Id="113" Count="4" />
      <LineId Id="162" Count="0" />
      <LineId Id="118" Count="4" />
      <LineId Id="163" Count="0" />
      <LineId Id="123" Count="4" />
      <LineId Id="164" Count="0" />
      <LineId Id="197" Count="3" />
      <LineId Id="203" Count="2" />
      <LineId Id="128" Count="1" />
      <LineId Id="196" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="130" Count="2" />
      <LineId Id="166" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="133" Count="4" />
      <LineId Id="165" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="206" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>