<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_SequenceDM_Fill" Id="{484a57e3-a32d-46cf-b5e9-b65f312773b2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SequenceDM_Fill EXTENDS FB_SequenceBase

VAR
	bUseMainPump_A: BOOL := TRUE;  // this boolean is used to keep track of which of the two redudant pumps we should use
END_VAR

VAR_IN_OUT
	devices: ST_DMComponents;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{c035ba78-c9be-4304-949b-9c1ddc8c334f}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
		Here we set the order of things to command, what the commands should be, and also how much time to allow during and between steps
		Every component listed below becomes 'Enabled' at each step
*)

sSequenceName := 'DM Fill SEQ';
sSequenceName := 'Dosing Machine Fill sequence';




]]></ST>
      </Implementation>
    </Method>
    <Method Name="populateSteps" Id="{71d6e564-aa28-4b09-b247-7d47a25165ab}">
      <Declaration><![CDATA[METHOD populateSteps : ST_SequenceStep
VAR_INPUT
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
		Here we set the order of things to command, what the commands should be, and also how much time to allow during and between steps
		Every component listed below becomes 'Enabled' at each step
*)

Step1.Device := devices.fbStrainer;
Step1.Command := E_DeviceState.RUNNING;
Step1.StepMinDuration := T#0S;
Step1.DelayUntilNextStep := T#0S;
aSequenceSteps[1] := Step1;
 
Step2.Device := devices.fbUnit_UltraSonCleaner;
Step2.Command := E_DeviceState.ON;
Step2.StepMinDuration := T#0S;
Step2.DelayUntilNextStep := T#0S;
aSequenceSteps[2] := Step2;
 
Step3.Device := devices.fbUVFilter1;
Step3.Command := E_DeviceState.ON;
Step3.StepMinDuration := T#0S;
Step3.DelayUntilNextStep := T#0S;
aSequenceSteps[3] := Step3;

Step4.Device := devices.fbValve_DosingSupply;
Step4.Command := E_DeviceState.OPEN;
Step4.StepMinDuration := T#0S;
Step4.DelayUntilNextStep := T#0S;
aSequenceSteps[4] := Step4; 


Step5.Device := devices.fbPump_MainPumpA;
Step5.Command := E_DeviceState.RUNNING;
Step5.StepMinDuration := T#0S;
Step5.DelayUntilNextStep := T#0S;
aSequenceSteps[5] := Step5;
 
Step6.Device := devices.fbPump_MainPumpB;
Step6.Command := E_DeviceState.RUNNING;
Step6.StepMinDuration := T#0S;
Step6.DelayUntilNextStep := T#0S;
aSequenceSteps[6] := Step6;

Step7.Device := devices.fbPump_MainPumpB;
Step7.Device := devices.fbDosingPump_phDown;
Step7.Command := E_DeviceState.RUNNING;
Step7.StepMinDuration := T#0S;
Step7.DelayUntilNextStep := T#0S;
aSequenceSteps[7] := Step7;
 
Step8.Device := devices.fbUnit_OxyInjector;
Step8.Command := E_DeviceState.ON;
Step8.StepMinDuration := T#0S;
Step8.DelayUntilNextStep := T#0S;
aSequenceSteps[8] := Step8;

nNumberSequenceSteps := 8;  // use this number to limit the number of operations 
updateVarIDs();]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_SequenceDM_Fill">
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_SequenceDM_Fill.FB_init">
      <LineId Id="10" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="309" Count="0" />
      <LineId Id="311" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="308" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="304" Count="0" />
      <LineId Id="301" Count="0" />
      <LineId Id="97" Count="0" />
    </LineIds>
    <LineIds Name="FB_SequenceDM_Fill.populateSteps">
      <LineId Id="9" Count="3" />
      <LineId Id="16" Count="0" />
      <LineId Id="67" Count="3" />
      <LineId Id="120" Count="0" />
      <LineId Id="71" Count="4" />
      <LineId Id="121" Count="0" />
      <LineId Id="76" Count="5" />
      <LineId Id="122" Count="0" />
      <LineId Id="82" Count="4" />
      <LineId Id="124" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="87" Count="3" />
      <LineId Id="125" Count="0" />
      <LineId Id="91" Count="4" />
      <LineId Id="126" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="98" Count="2" />
      <LineId Id="128" Count="0" />
      <LineId Id="101" Count="4" />
      <LineId Id="127" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="157" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>